# conduit

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  gatsby-config.ts  git-history.txt  nx.json  package-lock.json  package.json  pnpm-lock.yaml  readme.md  settings.gradle  turbo.json
app/: build.gradle
app/src/main/: AndroidManifest.xml
apps/auth-service/: package.json
apps/auth-service/src/: index.ts
apps/monitoring-service/: package.json
apps/user-service/: package.json  tsconfig.json
apps/user-service/src/: index.ts
backend/: Cargo.toml
backend/migrations/: 20250515090701_create_initial_tables.sql
backend/src/: error.rs  main.rs
backend/src/adapters/primary/: mod.rs
backend/src/adapters/primary/http/: auth_handler.rs  mod.rs  routes.rs  user_handler.rs
backend/src/adapters/primary/services/: auth_service_impl.rs  mod.rs  user_service_impl.rs
backend/src/adapters/secondary/: mod.rs
backend/src/adapters/secondary/cache/: redis_client.rs
backend/src/adapters/secondary/database/: errors.rs  mod.rs
backend/src/adapters/secondary/messaging/: rabbitmq_client.rs
backend/src/adapters/secondary/repositories/: mod.rs  mysql_auth_repository.rs  mysql_user_repository.rs
backend/src/config/: app.rs  di.rs  mod.rs
backend/src/domain/: auth.rs  user.rs
backend/src/ports/primary/: auth_service.rs  mod.rs  user_service.rs
backend/src/ports/secondary/: auth_repository.rs  mod.rs  user_repository.rs
gradle/wrapper/: gradle-wrapper.properties
load-balancer/: Cargo.toml
load-balancer/src/: main.rs
(+27 files in other folders)
