[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.4"
axum-macros = "0.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
futures-lite = "2.6.0"
hyper = "1.6.0"
lapin = "2.5.3"
once_cell = "1.21.3"
redis = { version = "0.31.0", features = ["tokio-comp", "aio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
